fix horizontal scrolling

--- a/src/App.m.css
+++ b/src/App.m.css
@@ -23,7 +23,7 @@
 	width: 80vw;
 	height: 80vw;
 	opacity: 0.4;
-	position: absolute;
+	position: fixed;
 	right: -40vw;
 	top: -40vw;
 	z-index: -1;
